# RealPlanner

./: .gitignore  Makefile  README.md  WARP.md
backend/: DEBUGGING_GUIDE.md  DEBUG_WITH_UVICORN_CURL.md  Makefile  ROUTE_OPTIMIZATION.md  ROUTE_OPTIMIZATION_ARCHITECTURE.md  SETUP.md  debug_route_optimization.py  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: endpoints.py
backend/app/core/: config.py  logging.py
backend/app/models/: database.py  schemas.py
backend/app/schemas/: property.py  route.py
backend/app/services/: curl_generator.py  geocoding.py  greedy_optimizer.py  route_optimization_api.py  routes_api.py  routing.py  time_windows.py
backend/app/services/google/: routes_api.py
backend/docs/: DEBUGGING_GUIDE.md  DEBUG_WITH_UVICORN_CURL.md
backend/scripts/: debug_route_optimization.py  remove_debug_breakpoints.py  test_with_curl.py  test_with_curl.sh
backend/tests/: README.md  __init__.py  run_tests.py  test_optimization.py
frontend/: package-lock.json
frontend/debug/: README.md
frontend/src/: App.css  App.tsx
